--- a/typeface.css
+++ b/typeface.css
@@ -1,6 +1,5 @@
 :root {
-    /* We define a base for the proportion */
-    --base-size: 1.125rem; /* 18px - Standard readable body size */
+    --base-size: 1.125rem;
 }
 
 .logo-font{
@@ -16,14 +15,16 @@
     font-size: 6rem;
     font-weight: normal;
     line-height: 1.1;
-    letter-spacing: -0.02em;
+    margin-top: 1rem;
+    margin-bottom: 1rem;
 }
 
 .h1 {
     font-size: 6rem;
     font-family: "Taviraj", serif;
     font-weight: 600;
-    font-style: semi-bold;
+    line-height: 150%;
+    margin: 1rem 0;
 }
 
 .h2 {
@@ -31,11 +32,12 @@
     font-family: "Taviraj", serif;
     font-weight: 400;
     font-style: normal;
+    margin: 0.8rem 0;
 }
 
 .main-p {
     font-family: 'Montserrat', sans-serif;
-    font-size: 1.25rem;
+    font-size: 1.1rem;
     font-weight: 400;
     line-height: 1.6;
     max-width: 600px;
@@ -43,7 +45,7 @@
 
 .caption {
     font-family: 'Montserrat', sans-serif;
-    font-size: 1.125rem; /* 18px */
+    font-size: 1.1rem; /* 18px */
     font-weight: 500;
     font-style: italic;
     color: #666;
@@ -56,4 +58,8 @@
     font-weight: 300;
     text-decoration: none;
     letter-spacing: 0.05em;
+}
+
+.active {
+    font-weight: bold;
 }
